add app download

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="This is Jack Hu's blog.">
     <meta name="keyword" content="Jack Hu blog 前端博客 node angular">
     <meta name="viewport" content="width=device-width">
+    <meta property="qc:admins" content="155045156762133056470" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
