--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,11 @@
 <html ng-app="jackblog">
   <head>
     <meta charset="utf-8">
-    <title>Jack Hu's blog</title>
+    <title>Jack Hu's blog angular1.x版</title>
     <base href="/">
     <meta name="description" content="This is Jack Hu's blog.">
-    <meta name="keyword" content="Jack Hu blog 前端博客 node angular">
+    <meta name="keyword" content="Jackblog angular1 angular angular-ui-bootstrap angular-resource angular-ui-router AngularJS-Toaster ngprogress">
     <meta name="viewport" content="width=device-width">
-    <meta property="qc:admins" content="155045156762133056470" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
@@ -24,7 +23,7 @@
   </head>
   <body ng-class="{'night-mode':!dayMode,'day-mode':dayMode}" ng-init="(dayMode=true)">
     
-    <!--[if lt IE 10]>
+    <!--[if lt IE 9]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
