--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html ng-app="jackblog">
   <head>
     <meta charset="utf-8">
-    <title>Jack Hu's blog angular1.x版</title>
+    <title>Jackblog angular1.x 版</title>
     <base href="/">
     <meta name="description" content="This is Jack Hu's blog.">
     <meta name="keyword" content="Jackblog angular1 angular angular-ui-bootstrap angular-resource angular-ui-router AngularJS-Toaster ngprogress">
